force-app/main/default/objects/Order/fields/ProdutoUF__c.field-meta.xml
<CustomField>
    <fullName>ProdutoUF__c</fullName>
    <description>Campo para informar UF da linha. Usado na J21 do bloco 7</description>
    <formula>CASE(DDD__c,
&quot;11&quot;,&quot;SP&quot;,&quot;12&quot;,&quot;SP&quot;,&quot;13&quot;,&quot;SP&quot;,&quot;14&quot;,&quot;SP&quot;,&quot;15&quot;,&quot;SP&quot;,&quot;16&quot;,&quot;SP&quot;,&quot;17&quot;,&quot;SP&quot;,&quot;18&quot;,&quot;SP&quot;,&quot;19&quot;,&quot;SP&quot;,
&quot;21&quot;, &quot;RJ&quot;, &quot;22&quot;, &quot;RJ&quot;, &quot;24&quot;, &quot;RJ&quot;,
&quot;27&quot;, &quot;ES&quot;, &quot;28&quot;, &quot;ES&quot;,
&quot;31&quot;, &quot;MG&quot;, &quot;32&quot;, &quot;MG&quot;, &quot;33&quot;, &quot;MG&quot;, &quot;34&quot;, &quot;MG&quot;, &quot;35&quot;, &quot;MG&quot;, &quot;37&quot;, &quot;MG&quot;, &quot;38&quot;, &quot;MG&quot;,
&quot;41&quot;, &quot;PR&quot;, &quot;42&quot;, &quot;PR&quot;, &quot;43&quot;, &quot;PR&quot;, &quot;44&quot;, &quot;PR&quot;, &quot;45&quot;, &quot;PR&quot;, &quot;46&quot;, &quot;PR&quot;,
&quot;47&quot;, &quot;SC&quot;, &quot;48&quot;, &quot;SC&quot;, &quot;49&quot;, &quot;SC&quot;,
&quot;51&quot;, &quot;RS&quot;, &quot;53&quot;, &quot;RS&quot;, &quot;54&quot;, &quot;RS&quot;, &quot;55&quot;, &quot;RS&quot;,
&quot;61&quot;, &quot;DF&quot;,
&quot;62&quot;, &quot;GO&quot;, &quot;64&quot;, &quot;GO&quot;,
&quot;63&quot;, &quot;TO&quot;,
&quot;65&quot;, &quot;MT&quot;, &quot;66&quot;, &quot;MT&quot;,
&quot;67&quot;, &quot;MS&quot;,
&quot;68&quot;, &quot;AC&quot;,
&quot;69&quot;, &quot;RO&quot;,
&quot;71&quot;, &quot;BA&quot;, &quot;73&quot;, &quot;BA&quot;, &quot;74&quot;, &quot;BA&quot;, &quot;75&quot;, &quot;BA&quot;, &quot;77&quot;, &quot;BA&quot;,
&quot;79&quot;, &quot;SE&quot;,
&quot;81&quot;, &quot;PE&quot;, &quot;87&quot;, &quot;PE&quot;,
&quot;82&quot;, &quot;AL&quot;,
&quot;83&quot;, &quot;PB&quot;,
&quot;84&quot;, &quot;RN&quot;,
&quot;85&quot;, &quot;CE&quot;, &quot;88&quot;, &quot;CE&quot;,
&quot;86&quot;, &quot;PI&quot;, &quot;89&quot;, &quot;PI&quot;,
&quot;91&quot;, &quot;PA&quot;, &quot;93&quot;, &quot;PA&quot;, &quot;94&quot;, &quot;PA&quot;,
&quot;95&quot;, &quot;RR&quot;,
&quot;96&quot;, &quot;AP&quot;,
&quot;92&quot;, &quot;AM&quot;, &quot;97&quot;, &quot;AM&quot;,
&quot;98&quot;, &quot;MA&quot;, &quot;99&quot;, &quot;MA&quot;,
 &quot;&quot;)</formula>
    <label>UF do produto</label>
    <type>Text</type>
</CustomField>