force-app/main/default/objects/Order/fields/ProfileLogged__c.field-meta.xml
<CustomField>
    <fullName>ProfileLogged__c</fullName>
    <description>Referência ao campo Name (api name) do objeto User (api name)</description>
    <label>Perfil Logado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>