force-app/main/default/objects/Order/fields/QRCode__c.field-meta.xml
<CustomField>
    <fullName>QRCode__c</fullName>
    <description>Campo responsável por armazenar a URL de QR Code gerada.</description>
    <label>QR Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>