force-app/main/default/objects/Order/fields/ReasonforOperation__c.field-meta.xml
<CustomField>
    <fullName>ReasonforOperation__c</fullName>
    <description>Motivo da operação de bloqueio ou desbloqueio</description>
    <label>Motivo da Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por motivos particulares</fullName>
            </value>
            <value>
                <fullName>Procedimento interno</fullName>
            </value>
            <value>
                <fullName>Assistência técnica</fullName>
            </value>
            <value>
                <fullName>Roubo/Furto</fullName>
            </value>
            <value>
                <fullName>Perda/Extravio</fullName>
            </value>
            <value>
                <fullName>Suspensão Administrativa</fullName>
            </value>
            <value>
                <fullName>A Pedido Cliente</fullName>
            </value>
            <value>
                <fullName>Fraude</fullName>
            </value>
            <value>
                <fullName>Troca Normal/Pedido do Cliente</fullName>
            </value>
            <value>
                <fullName>Perda</fullName>
            </value>
            <value>
                <fullName>Defeito</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>