force-app/main/default/objects/Order/fields/ReasonForRequestingAuthorization__c.field-meta.xml
<CustomField>
    <fullName>ReasonForRequestingAuthorization__c</fullName>
    <formula>Remarks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motivo da solicitação da autorização</label>
    <type>Text</type>
</CustomField>