force-app/main/default/objects/Order/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>US 349 -Solicitar autorização de alçada(Habilitação) - Guilherme Kaiser</description>
    <label>Comentários</label>
    <length>255</length>
    <type>Text</type>
</CustomField>