force-app/main/default/objects/Order/fields/RequestDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>RequestDateAndTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data/Hora da solicitação</label>
    <type>DateTime</type>
</CustomField>