force-app/main/default/objects/Order/fields/RequesterUser__c.field-meta.xml
<CustomField>
    <fullName>RequesterUser__c</fullName>
    <formula>CreatedBy.FirstName &amp; " " &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuário solicitante</label>
    <type>Text</type>
</CustomField>