force-app/main/default/objects/Order/fields/RequesterUserLogin__c.field-meta.xml
<CustomField>
    <fullName>RequesterUserLogin__c</fullName>
    <formula>SellerLogin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login do usuário solicitante</label>
    <type>Text</type>
</CustomField>