force-app/main/default/objects/Order/fields/SalesChannel__c.field-meta.xml
<CustomField>
    <fullName>SalesChannel__c</fullName>
    <description>Referência ao campo ChannelName_c (api name) do objeto User (api name)</description>
    <label>Canal de Venda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>