force-app/main/default/objects/Order/fields/SalesOrderId__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderId__c</fullName>
    <description>Number Order response for SAP</description>
    <label>Número da Ordem SAP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>