force-app/main/default/objects/Order/fields/SellerLogin__c.field-meta.xml
<CustomField>
    <fullName>SellerLogin__c</fullName>
    <description>Referência ao campo UserName (api name) do objeto User (api name)</description>
    <label>Login do Vendedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>