force-app/main/default/objects/Order/fields/ServiceStatus__c.field-meta.xml
<CustomField>
    <fullName>ServiceStatus__c</fullName>
    <label>Status da recarga</label>
    <length>50</length>
    <type>Text</type>
</CustomField>