force-app/main/default/objects/Order/fields/SIMCardType__c.field-meta.xml
<CustomField>
    <fullName>SIMCardType__c</fullName>
    <label>Tipo de Chip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM Card</fullName>
            </value>
            <value>
                <fullName>eSIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>