force-app/main/default/objects/Order/fields/SMDPPlusPlatform__c.field-meta.xml
<CustomField>
    <fullName>SMDPPlusPlatform__c</fullName>
    <description>Campo utilizado para armazenar a informação SM_DP_PLUS_PLATFORM retornada da API de Reserva de ICCID (resourcePoolManagement/v6/reservation).</description>
    <label>SM DP Plus Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>