force-app/main/default/objects/Order/fields/SMDSAddress__c.field-meta.xml
<CustomField>
    <fullName>SMDSAddress__c</fullName>
    <description>Campo utilizado para armazenar a informação SM_DS_ADDRESS retornada da API de Reserva de ICCID (resourcePoolManagement/v6/reservation).</description>
    <label>SM DS Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>