force-app/main/default/objects/Order/fields/StatusPID__c.field-meta.xml
<CustomField>
    <fullName>StatusPID__c</fullName>
    <label>Status PID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bloqueado</fullName>
            </value>
            <value>
                <fullName>Liberado</fullName>
            </value>
            <value>
                <fullName>PID Bloqueado</fullName>
                <isActive>false</isActive>
                <label>PID Bloqueado</label>
            </value>
            <value>
                <fullName>PID Liberado</fullName>
                <isActive>false</isActive>
                <label>PID Liberado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>