force-app/main/default/objects/Order/fields/StoreUser__c.field-meta.xml
<CustomField>
    <fullName>StoreUser__c</fullName>
    <description>Campo faz referencia ao campo Loja no objeto USER</description>
    <label>Loja/Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>