force-app/main/default/objects/Order/fields/SubChannel__c.field-meta.xml
<CustomField>
    <fullName>SubChannel__c</fullName>
    <label>SubChannel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>