force-app/main/default/objects/Order/fields/SuspendDate__c.field-meta.xml
<CustomField>
    <fullName>SuspendDate__c</fullName>
    <description>Data do início do ciclo de bloqueio</description>
    <label>Data de Início do Bloqueio</label>
    <type>Date</type>
</CustomField>