force-app/main/default/objects/Order/fields/SuspendEndDate__c.field-meta.xml
<CustomField>
    <fullName>SuspendEndDate__c</fullName>
    <description>Data do fim do ciclo de bloqueio</description>
    <label>Data de Término do Bloqueio</label>
    <type>Date</type>
</CustomField>