force-app/main/default/objects/Order/fields/TargetPlatform__c.field-meta.xml
<CustomField>
    <fullName>TargetPlatform__c</fullName>
    <description>Plataforma Destino: Pré Pago; Pós Pago; Controle; MVNO</description>
    <label>Plataforma Destino</label>
    <length>20</length>
    <type>Text</type>
</CustomField>