force-app/main/default/objects/Order/fields/TargetSystem__c.field-meta.xml
<CustomField>
    <fullName>TargetSystem__c</fullName>
    <description>Sistema Destino: Vivo Next; MVNE; Salesforce</description>
    <label>Sistema Destino</label>
    <length>50</length>
    <type>Text</type>
</CustomField>