force-app/main/default/objects/Order/fields/TreasuryStatus__c.field-meta.xml
<CustomField>
    <fullName>TreasuryStatus__c</fullName>
    <label>Status SEFAZ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>