force-app/main/default/objects/Order/fields/UnlockType__c.field-meta.xml
<CustomField>
    <fullName>UnlockType__c</fullName>
    <description>Tipos de desbloqueio que podem ser aplicados</description>
    <label>Tipo de Desbloqueio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Pedido</fullName>
            </value>
            <value>
                <fullName>Perda/Roubo</fullName>
            </value>
            <value>
                <fullName>Suspensão Administrativa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>