force-app/main/default/objects/Order/fields/useNextWindow__c.field-meta.xml
<CustomField>
    <fullName>useNextWindow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Chave Booleana que determina a próxima janela disponível, em requisição do sistema legado em contexto.</description>
    <label>Próxima Janela</label>
    <type>Checkbox</type>
</CustomField>