force-app/main/default/objects/Order/fields/vlocity_cmt__AsyncOperation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AsyncOperation__c</fullName>
    <description>This stores the asynchronous operation name for which this order is locked.</description>
    <inlineHelpText>This stores the asynchronous operation name for which this order is locked.</inlineHelpText>
    <label>Async Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
            <value>
                <fullName>BulkRequest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>