force-app/main/default/objects/Order/fields/windowDate__c.field-meta.xml
<CustomField>
    <fullName>windowDate__c</fullName>
    <description>Data da Janela de Portabilidade</description>
    <inlineHelpText>Data da Janela de Portabilidade</inlineHelpText>
    <label>Data da Janela</label>
    <type>DateTime</type>
</CustomField>