force-app/main/default/objects/Order/recordTypes/vlocity_cmt__SubOrder.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__SubOrder</fullName>
    <active>true</active>
    <description>A sub-order is an order that is part of a large master order. Each sub-order is often targeted to a single service point, site or subscriber.</description>
    <label>Sub Order</label>
</RecordType>