force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ACTIVATEDBY_USER.ALIAS</columns>
    <columns>vlocity_cmt__SupersededOrderId__c</columns>
    <columns>vlocity_cmt__OrchestrationPlanId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderAction__c</field>
        <operation>equals</operation>
        <value>Recarga Online</value>
    </filters>
    <label>Todos os pedidos</label>
</ListView>