force-app/main/default/objects/Order/listViews/Portabilidade.listView-meta.xml
<ListView>
    <fullName>Portabilidade</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>vlocity_cmt__DefaultServiceAccountId__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>equals</operation>
        <value>EffectPortOut,FreezeLine,EffectPortin,NumberSwap,ReversalPortout</value>
    </filters>
    <label>Portabilidade</label>
</ListView>