force-app/main/default/objects/Order/listViews/vlocity_cmt__AllOrders.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__AllOrders</fullName>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>RequesterUser__c</columns>
    <columns>CurrentIMSI__c</columns>
    <columns>NewIMSI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>All Orders</label>
</ListView>